Switched to dark mode and fixed top level SVG scaling.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,8 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+a { color: white; }
+
 .turbo-progress-bar {
  height: 8px;
   background: #ff3fff; /* Cyan blue 🎨 */
